@@ -4,6 +4,8 @@
 
 pending Fri, 04 Mar 2016 13:58:18 +0100 moocow
 	* fixed pod =encoding typo in Profile.pod
+	* added 'verbose' option to Profile::(Multi)Diff::saveHtmlFile
+	  - include sub-profile frequencies in diff html output, used by www wrappers if 'debug' flag is set.
 
 v0.08.004 Fri, 04 Mar 2016 13:25:20 +0100 moocow
 	* remove temporary PDL headers created by DiaColloDB::PackedFile::toPdl(), used by TDF::union()
